ebnf.txt
Program = ModuleDeclaration UseDeclarations Declarations ;

ModuleDeclaration = "module" StringLiteral ";" ;

UseDeclarations = UseBlock | UseDeclaration | empty ;
UseBlock = "use" "{" { UseItem } "}" ;
UseItem = [ Identifier ] StringLiteral [ "," ] ;
UseDeclaration = "use" [ Identifier ] StringLiteral ";" ;

(* Declarations *)
Declarations = { Declaration } ;
Declaration = FunctionDeclaration | StructDeclaration | EnumDeclaration | ErrorDeclaration | VariableDeclaration ;

FunctionDeclaration = TypeExpression Identifier "(" [ Parameters ] ")" ( Block | "=>" Expression ";" ) ;
Parameters = Parameter { "," Parameter } ;
Parameter = TypeExpression Identifier [ "=" Expression ];

TypeExpression = UnParenType | ParenType ;
UnParenType = BaseType { TypeSuffix } ;
ParenType = "(" TypeExpression ")" [ TypeSuffix ] ;
BaseType = PrimitiveType | Identifier | "void" | "type" ;
PrimitiveType = IntegerType | FloatType ;
IntegerType = ( "i" | "u" ) Digits ;
FloatType = "f32" | "f64" ;
TypeSuffix = ( OptionalType | PointerType | ArrayType | FunctionType | ErrorType ) [ TypeSuffix ];
OptionalType = "?" ;
Pointetype = "*" ;
ArrayType = "[" [ Expression ] "]" ;
FunctionType = "(" [ TypeList ] ")" ;
TypeList = TypeExpression { "," TypeExpression } ;
ErrorType = "<" [ Identifier { "," Identifier } ] ">" ;

StructDeclaration = "struct" Identifier "{" { StructMember } "}" ;
StructMember = FieldDeclaration | FunctionDeclaration ;
FieldDeclaration = TypeExpression FieldList [ "=" Expression ] "," ;
FieldList = Identifier { "," Identifier } ;

EnumDeclaration = "enum" Identifier "{" EnumMembers "}" ;
EnumMembers = { EnumMember  [ "," ] } ;
EnumMember = SimpleEnumMember | ComplexEnumMember ;
SimpleEnumMember = Identifier ;
ComplexEnumMember = TypeExpression Identifier ;

ErrorDeclaration = "error" Identifier "{" ErrorMembers "}" ;
ErrorMembers = { ErrorMember  [ "," ] } ;
ErrorMember = SimpleErrorMember | ComplexErrorMember ;
SimpleErrorMember = Identifier ;
ComplexErrorMember = TypeExpression Identifier ;

VariableDeclaration = [ "mut" ] TypeExpression Identifier [ "=" Expression ] ";" ;

Statement = Declaration
          | IfStatement
          | WhileStatement
          | ForStatement
          | DeferStatement
          | MatchStatement
          | ReturnStatement
          | ExpressionStatement ;

Capture = "|" (Identifier [ "*" ]|"_") "|" ;
IfStatement = "if" Expression [ Capture ] ( Block|Statement ) [ "else" ( IfStatement|Block|Statement ";" ) ] ;

WhileStatement = "while" Expression ( Block | Statement ";" ) ;

ForStatement = "for" Expression Capture ( Block|Statement ";" ) ;

DeferStatement = "defer" [ Capture ] ( Block|Statement ";" ) ;

MatchStatement = "match" Expression "{" { MatchArm } "}" ;
MatchExpr = ( Literal | RangeExpression | EnumPattern | DefaultPattern ) ;
EnumPattern = "." EnumMember
DefaultPattern = "_" ;
MatchArm = MatchExpr { "," MatchExpr } ":" [ Capture ] (Block | Expression | Statement ) "," ;

ExpressionStatement = Expression ";" ;

ReturnStatement = "return" [ Expression ] ";" ;

Expression = AssignmentExpression ;
AssignmentExpression = AdditiveExpression [ AssignmentOperator AssignmentExpression ] ;
AssignmentOperator = "=" | "+=" | "-=" | "*=" | "/=" | "~=" ;

UnaryExpression = [ UnaryOperator ] PostfixExpression ;
UnaryOperator = "&" | "*" | "!" | "-" ;
MultiplicativeExpression = UnaryExpression { ( "*" | "/" | "%" ) UnaryExpression } ;
AdditiveExpression = MultiplicativeExpression { ( "+" | "-" ) MultiplicativeExpression } ;

PostfixExpression = PrimaryExpression { PostfixOperator } ;
PostfixOperator = "." Identifier
                | "." "?"
                | "[" Expression "]"
                | "(" [ ArgumentList ] ")" ;

PrimaryExpression = Literal
                  | Identifier
                  | "(" Expression ")" ;

ArgumentList = Expression { "," Expression } ;

Block = "{" { Statement } "}" ;

RangeExpression = Expression ".." Expression ;

Letter = "A" | "B" | ... "Z" | "a" | "b" | ... | "z" ;
Digit = "0" | "1" | ... | "9" ;

Identifier = [ "$" ] [ "_" ] Letter { Letter | Digit | "_" } ;
StringLiteral = '"' { Character } '"' ;
Literal = IntegerLiteral
        | FloatLiteral
        | StringLiteral
        | CharLiteral
        | BooleanLiteral
        | "null"
        | "undefined" ;
BooleanLiteral = "true" | "false" ;
CharLiteral =  "'" ( Character | EscapeSequence ) "'" ;
Character = (* Any valid UTF-8 character except double quote and newline *) ;
FloatLiteral = (* Standard Floating Point Numbers *)
IntegerLiteral = (* Standard Integer Numbers *)
EscapeSequence = "\" ("n" | "t" | "r" | "'" | "\"" | "0" ) ;
